<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_NoteCell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_cellTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_cell"
        android:textColor="@color/darkGrey"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_cellDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cell_description"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_cellColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/darkGrey"
        android:text="@string/colour_cell"
        android:textSize="2sp"
        android:visibility="invisible" />

</LinearLayout>